# Chess-Game

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PERFORMANCE_IMPROVEMENTS.md  README.md  SECURITY.md  SUPPORT.md  first_launch.sh  main.py  progress.md  pyproject.toml  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
engine/: __init__.py  camera.py  fog.py  lighting.py  materials.py  post_processing.py  renderer.py  scoring.py  shadows.py  skybox.py  utils.py
engine/shaders/: bloom_blur.frag  final_composite.frag  pbr.frag  pbr.vert  post_quad.vert  shadow_depth.frag  shadow_depth.vert  skybox.frag  skybox.vert
game_core/: __init__.py  chess_game.py  scoring.py
output/board-missing-check/: state-0.json
output/deep-game-test/: report.json
output/finish-pass/: state-0.json
output/overhaul-pass-1/: state-0.json
output/overhaul-pass-2/: report.json
output/overhaul-pass-final/: state-0.json
output/perspective-fix/: state-0.json
output/playable-final/: state-0.json
output/polish-pass/: state-0.json
output/safe-render-check/: report.json
output/verification-pass/: state-0.json
tests/: test_chess_game.py  test_imports.py  test_scoring.py  test_utils.py  test_web_chess_contract.py
unreal/: README.md  chess_state.schema.json  export_state.py  sample_state.json
unreal/NeonCityChessUE/: NeonCityChessUE.uproject
web-chess/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web-chess/src/: main.ts  (+4 more)
(+51 files in other folders)
